--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
@@ -55,56 +55,56 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
+        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
       </section>
       <!--Преимущества-->
-      <section class="advantages section">
+      <section class="advantages-section section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="advantages-list list">
-            <li class="advantages-list-item">
-              <div class="advantages-icon-area">
-                <svg class="advantages-icon">
+          <ul class="advantages list">
+            <li class="advantages__item">
+              <div class="advantages__icon">
+                <svg width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="advantages-title">Внимание к деталям</h3>
-              <p class="advantage-text">
+              <h3 class="advantages__title">Внимание к деталям</h3>
+              <p class="advantage__text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <div class="advantages-icon-area">
-                <svg class="advantages-icon">
+            <li class="advantages__item">
+              <div class="advantages__icon">
+                <svg width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="advantages-title">Пунктуальность</h3>
-              <p class="advantage-text">
+              <h3 class="advantages__title">Пунктуальность</h3>
+              <p class="advantage__text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
 
-            <li class="advantages-list-item">
-              <div class="advantages-icon-area">
-                <svg class="advantages-icon">
+            <li class="advantages__item">
+              <div class="advantages__icon">
+                <svg width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="advantages-title">Планирование</h3>
-              <p class="advantage-text">
+              <h3 class="advantages__title">Планирование</h3>
+              <p class="advantage__text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <div class="advantages-icon-area">
-                <svg class="advantages-icon">
+            <li class="advantages__item">
+              <div class="advantages__icon">
+                <svg width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="advantages-title">Современные технологии</h3>
-              <p class="advantage-text">
+              <h3 class="advantages__title">Современные технологии</h3>
+              <p class="advantage__text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
@@ -112,182 +112,179 @@
         </div>
       </section>
       <!--Сферы-->
-      <section class="spheres section">
+      <section class="spheres-section section">
         <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="spheres-list list">
-            <li class="spheres-list-item">
+          <h2 class="section__title">Чем мы занимаемся</h2>
+          <ul class="spheres list">
+            <li class="spheres__item">
               <img
                 src="./images/index/sphere1.jpg"
                 alt="Человек пишет программный код"
                 width="370"
                 height="294"
-                class="spheres-image"
               />
-              <p class="spheres-overlay">Десктопные приложения</p>
+              <p class="spheres__overlay">Десктопные приложения</p>
             </li>
-            <li class="spheres-list-item">
+            <li class="spheres__item">
               <img
                 src="./images/index/sphere2.jpg"
                 alt="Человек разрабатывает интерфейс"
                 width="370"
                 height="294"
-                class="spheres-image"
               />
-              <p class="spheres-overlay">Мобильные приложения</p>
+              <p class="spheres__overlay">Мобильные приложения</p>
             </li>
-            <li class="spheres-list-item">
+            <li class="spheres__item">
               <img
                 src="./images/index/sphere3.jpg"
                 alt="Человек выбирает цвет на планшете"
                 width="370"
                 height="294"
-                class="spheres-image"
               />
-              <p class="spheres-overlay">Дизайнерские решения</p>
+              <p class="spheres__overlay">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
       </section>
       <!--Команда-->
-      <section class="team section">
+      <section class="team-section section">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="team-list-item">
+          <h2 class="section__title">Наша команда</h2>
+          <ul class="team list">
+            <li class="team__item">
               <img src="./images/index/team1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-              <h3 class="teammate">Игорь Демьяненко</h3>
-              <p class="teammate-position">Product Designer</p>
-              <ul class="teammate-social list">
+              <h3 class="team__person">Игорь Демьяненко</h3>
+              <p class="team__position">Product Designer</p>
+              <ul class="social list">
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
             </li>
-            <li class="team-list-item">
+            <li class="team__item">
               <img src="./images/index/team2.jpg" alt="Ольга Репина" width="270" height="260" />
-              <h3 class="teammate">Ольга Репина</h3>
-              <p class="teammate-position">Frontend Developer</p>
-              <ul class="teammate-social list">
+              <h3 class="team__person">Ольга Репина</h3>
+              <p class="team__position">Frontend Developer</p>
+              <ul class="social list">
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
             </li>
-            <li class="team-list-item">
+            <li class="team__item">
               <img src="./images/index/team3.jpg" alt="Николай Тарасов" width="270" height="260" />
-              <h3 class="teammate">Николай Тарасов</h3>
-              <p class="teammate-position">Marketing</p>
-              <ul class="teammate-social list">
+              <h3 class="team__person">Николай Тарасов</h3>
+              <p class="team__position">Marketing</p>
+              <ul class="social list">
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
             </li>
-            <li class="team-list-item">
+            <li class="team__item">
               <img src="./images/index/team4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-              <h3 class="teammate">Михаил Ермаков</h3>
-              <p class="teammate-position">UI Designer</p>
-              <ul class="teammate-social list">
+              <h3 class="team__person">Михаил Ермаков</h3>
+              <p class="team__position">UI Designer</p>
+              <ul class="social list">
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="social-link">
-                    <svg class="social-icon" width="20" height="20">
+                  <a href="#" class="social__link">
+                    <svg class="social__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -300,46 +297,46 @@
       <!--Постоянные клиенты-->
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="clients-list">
-            <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+          <h2 class="section__title">Постоянные клиенты</h2>
+          <ul class="clients list">
+            <li class="clients__item">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item ">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item ">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item ">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item list">
-              <a href="#" class="clients-link link">
-                <svg class="clients-icon" width="106" height="60">
+              <a href="#" class="clients__link link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company6"></use>
                 </svg>
               </a>
@@ -418,8 +415,8 @@
     <!--Backdrop-->
     <div class="backdrop is-hidden" data-modal>
       <form class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-close-icon" width="18" height="18">
+        <button type="button" class="modal__close" data-modal-close>
+          <svg width="18" height="18">
             <use href="./images/icons.svg#modal-close"></use>
           </svg>
         </button>
