--- a/index.html
+++ b/index.html
@@ -20,34 +20,35 @@
     <!--Шапка-->
     <header class="page-header">
       <div class="container">
-        <a lang="en" href="./index.html" class="logo link"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
+        <a lang="en" href="./index.html" class="logo link">
+          <span class="logo__accent">Web</span>
+          Studio
+        </a>
         <nav>
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav link current-page">Студия</a>
+          <ul class="nav list">
+            <li class="nav__item">
+              <a href="./index.html" class="nav__link link current-page">Студия</a>
             </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav link">Портфолио</a>
+            <li class="nav__item">
+              <a href="./portfolio.html" class="nav__link link">Портфолио</a>
             </li>
-            <li class="nav-item">
-              <a href="#" class="nav link">Контакты </a>
+            <li class="nav__item">
+              <a href="#" class="nav__link link">Контакты </a>
             </li>
           </ul>
         </nav>
-        <ul class="header-addr-list list">
-          <li class="header-addr-item">
-            <svg class="header-icon" width="16" height="12">
+        <ul class="header-addr list">
+          <li class="header-addr__item">
+            <svg class="header-addr__icon" width="16" height="12">
               <use href="./images/icons.svg#envelope"></use>
             </svg>
-            <a href="mailto:info@devstudio.com" class="addr link"> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="header-addr__link link"> info@devstudio.com </a>
           </li>
-          <li class="header-addr-item">
-            <svg class="header-icon smartphone" width="10" height="16">
+          <li class="header-addr__item">
+            <svg class="header-addr__icon" width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
             </svg>
-            <a href="tel:+380961111111" class="addr link"> +38 096 111 11 11 </a>
+            <a href="tel:+380961111111" class="header-addr__link link"> +38 096 111 11 11 </a>
           </li>
         </ul>
       </div>
@@ -158,28 +159,28 @@
               <ul class="social list">
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -193,28 +194,28 @@
               <ul class="social list">
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -228,28 +229,28 @@
               <ul class="social list">
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -263,28 +264,28 @@
               <ul class="social list">
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#" class="social__link">
-                    <svg class="social__icon" width="20" height="20">
+                    <svg class="social__icon social__icon--team" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -306,21 +307,21 @@
                 </svg>
               </a>
             </li>
-            <li class="clients__item ">
+            <li class="clients__item">
               <a href="#" class="clients__link link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients__item ">
+            <li class="clients__item">
               <a href="#" class="clients__link link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients__item ">
+            <li class="clients__item">
               <a href="#" class="clients__link link">
                 <svg class="clients__icon" width="106" height="60">
                   <use href="./images/icons.svg#company4"></use>
@@ -347,65 +348,69 @@
     </main>
     <!--Подвал-->
     <footer class="page-footer">
-      <div class="footer-container container">
-        <div class="footer-addr">
+      <div class="container">
+        <div class="page-footer__addresses">
           <a lang="en" href="./index.html" class="logo link"
-            ><span class="logo-accent">Web</span>Studio</a
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address>
             <ul class="list">
-              <li><a href="" class="real-address addr link">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="" class="footer-addr__link footer-addr__link--real link">г. Киев, пр-т Леси Украинки, 26</a></li>
               <li>
-                <a href="mailto:info@example.com" class="email addr link">info@example.com</a>
+                <a href="mailto:info@example.com" class="footer-addr__link footer-addr__link--email link">info@example.com</a>
               </li>
-              <li><a href="tel:+380961111111" class="phone addr link">+38 096 111 11 11</a></li>
+              <li><a href="tel:+380961111111" class="footer-addr__link footer-addr__link--phone link">+38 096 111 11 11</a></li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
-          <h3 class="footer-title">Присоединяйтесь</h3>
-          <ul class="footer-social-list list">
+        <div class="page-footer__social">
+          <h3 class="page-footer__title">Присоединяйтесь</h3>
+          <ul class="social list">
             <li>
-              <a href="#" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a href="#" class="social__link social__link--footer">
+                <svg class="social__icon social__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a href="#" class="social__link social__link--footer">
+                <svg class="social__icon social__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a href="#" class="social__link social__link--footer">
+                <svg class="social__icon social__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#" class="footer-social-link">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a href="#" class="social__link social__link--footer">
+                <svg class="social__icon social__icon--footer" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <form class="footer-subscribe">
-          <h3 class="footer-title">Подпишитесь на рассылку</h3>
-          <div class="footer-subscribe-items">
+        <form class="page-footer__subscribe">
+          <h3 class="page-footer__title">Подпишитесь на рассылку</h3>
+          <div class="subscribe">
             <input
-              class="subscribe-input"
+              class="subscribe__input"
               name="subscribe-email"
               type="email"
               placeholder="E-mail"
             />
-            <button type="submit" class="subscribe-button">Подписаться</button>
-            <svg class="subscribe-icon">
+            <button 
+              class="subscribe__button"
+              type="submit"> 
+              Подписаться
+            </button>
+            <svg class="subscribe__icon">
               <use href="./images/icons.svg#send"></use>
             </svg>
           </div>
@@ -421,34 +426,34 @@
           </svg>
         </button>
 
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
 
-        <ul class="modal-input-list">
-          <li class="modal-input-item">
-            <label for="name" class="input-label">Имя</label>
-            <input type="text" name="client-name" id="name" class="input-text-box" />
-            <svg class="input-icon">
+        <ul>
+          <li class="inputbox">
+            <label for="name" class="inputbox__label">Имя</label>
+            <input type="text" name="client-name" id="name" class="inputbox__text" />
+            <svg class="inputbox__icon">
               <use href="./images/icons.svg#input-name"></use>
             </svg>
           </li>
-          <li class="modal-input-item">
-            <label for="tel" class="input-label">Телефон</label>
-            <input type="tel" name="client-tel" id="tel" class="input-text-box" />
-            <svg class="input-icon">
+          <li class="inputbox">
+            <label for="tel" class="inputbox__label">Телефон</label>
+            <input type="tel" name="client-tel" id="tel" class="inputbox__text" />
+            <svg class="inputbox__icon">
               <use href="./images/icons.svg#input-phone"></use>
             </svg>
           </li>
-          <li class="modal-input-item">
-            <label for="email" class="input-label">Почта</label>
-            <input type="email" name="client-email" id="email" class="input-text-box" />
-            <svg class="input-icon">
+          <li class="inputbox">
+            <label for="email" class="inputbox__label">Почта</label>
+            <input type="email" name="client-email" id="email" class="inputbox__text" />
+            <svg class="inputbox__icon">
               <use href="./images/icons.svg#input-email"></use>
             </svg>
           </li>
-          <li class="modal-input-item">
-            <label for="comment" class="input-label">Комментарий</label>
+          <li class="inputbox">
+            <label for="comment" class="inputbox__label">Комментарий</label>
             <textarea
-              class="input-comment-box"
+              class="inputbox__comment"
               name="client-comment"
               id="comment"
               placeholder="Введите текст"
@@ -456,20 +461,19 @@
           </li>
         </ul>
 
-        <label class="license-label">
-          <input type="checkbox" name="license-origin-cb" class="license-origin-cb" />
-          <svg class="license-svg-cb">
+        <label class="license">
+          <input type="checkbox" name="license-origin-cb" class="license__origin-cb" />
+          <svg class="license__svg-cb">
             <use href="./images/icons.svg#check"></use>
           </svg>
           <span>
             Соглашаюсь с рассылкой и принимаю
-            <a href="#" class="license-link">Условия договора</a>
+            <a href="#" class="license__link">Условия договора</a>
           </span>
         </label>
-        <button type="submit" class="button-submit">Отправить</button>
+        <button type="submit" class="license__button">Отправить</button>
       </form>
     </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
-
