--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,18 @@
             </li>
           </ul>
         </nav>
-        <ul class="addresses list">
-          <li class="addresses__item">
-            <svg class="addresses__icon" width="16" height="12">
+        <ul class="header-addr list">
+          <li class="header-addr__item">
+            <svg class="header-addr__icon" width="16" height="12">
               <use href="./images/icons.svg#envelope"></use>
             </svg>
-            <a href="mailto:info@devstudio.com" class="addresses__link link"> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="header-addr__link link"> info@devstudio.com </a>
           </li>
-          <li class="addresses__item">
-            <svg class="addresses__icon" width="10" height="16">
+          <li class="header-addr__item">
+            <svg class="header-addr__icon" width="10" height="16">
               <use href="./images/icons.svg#smartphone"></use>
             </svg>
-            <a href="tel:+380961111111" class="addresses__link link"> +38 096 111 11 11 </a>
+            <a href="tel:+380961111111" class="header-addr__link link"> +38 096 111 11 11 </a>
           </li>
         </ul>
       </div>
