--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,9 @@
             <svg class="header-addr__icon" width="16" height="12">
               <use href="./images/icons.svg#envelope"></use>
             </svg>
-            <a href="mailto:info@devstudio.com" class="header-addr__link link"> info@devstudio.com </a>
+            <a href="mailto:info@devstudio.com" class="header-addr__link link">
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-addr__item">
             <svg class="header-addr__icon" width="10" height="16">
@@ -276,11 +278,23 @@
           >
           <address>
             <ul class="list">
-              <li><a href="" class="footer-addr__link footer-addr__link--real link">г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li>
-                <a href="mailto:info@example.com" class="footer-addr__link footer-addr__link--email link">info@example.com</a>
+              <li class="footer-addr">
+                <a href="" class="footer-addr__link footer-addr__link--real link"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
-              <li><a href="tel:+380961111111" class="footer-addr__link footer-addr__link--phone link">+38 096 111 11 11</a></li>
+              <li class="footer-addr">
+                <a
+                  href="mailto:info@example.com"
+                  class="footer-addr__link footer-addr__link--email link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-addr">
+                <a href="tel:+380961111111" class="footer-addr__link footer-addr__link--phone link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
             </ul>
           </address>
         </div>
@@ -326,11 +340,7 @@
               type="email"
               placeholder="E-mail"
             />
-            <button 
-              class="subscribe__button"
-              type="submit"> 
-              Подписаться
-            </button>
+            <button class="subscribe__button" type="submit">Подписаться</button>
             <svg class="subscribe__icon">
               <use href="./images/icons.svg#send"></use>
             </svg>
